overhaul painting detection from variannt to resourcelocation for registry picking consitency