@@ -2,6 +2,7 @@ package subaraki.paintings.event;
 
 import net.minecraft.core.Holder;
 import net.minecraft.core.Registry;
+import net.minecraft.resources.ResourceKey;
 import net.minecraft.server.level.ServerPlayer;
 import net.minecraft.world.InteractionHand;
 import net.minecraft.world.entity.Entity;
@@ -15,6 +16,7 @@ import subaraki.paintings.utils.CommonConfig;
 import subaraki.paintings.utils.PaintingUtility;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class ProcessInteractEvent {
 
@@ -32,29 +34,29 @@ public class ProcessInteractEvent {
             if (target instanceof Painting painting) {
                 if (hand.equals(InteractionHand.MAIN_HAND)) {
                     if (player instanceof ServerPlayer serverPlayer && serverPlayer.getItemInHand(hand).getItem().equals(Items.PAINTING)) {
-                        PaintingVariant original = painting.getVariant().value();
-                        PaintingVariant firstMatch = null;
-                        PaintingVariant newArt = null;
+                        Holder<PaintingVariant> original = painting.getVariant();
+                        Holder<PaintingVariant> firstMatch = null;
+                        Holder<PaintingVariant> newArt = null;
 
                         // it is important to sort the paintings from big to small so all same size
                         // paintings will be next to one another
-                        //Motive[] validArtsArray = ForgeRegistries.PAINTING_TYPES.getValues().toArray(new Motive[0]);
-                        //Arrays.sort(validArtsArray, new ArtComparator());
-                        List<PaintingVariant> validArtsArray = Registry.PAINTING_VARIANT.stream().sorted(PaintingUtility.ART_COMPARATOR).toList();
+                        List<ResourceKey<PaintingVariant>> validArtsArray = Registry.PAINTING_VARIANT.registryKeySet().stream().filter(paintingVariantResourceKey -> {
+                            return PaintingUtility.ART_COMPARATOR.compare(Registry.PAINTING_VARIANT.getOrCreateHolderOrThrow(paintingVariantResourceKey).value(), original.value()) == 0;
+                        }).collect(Collectors.toList());
 
                         boolean takeNext = false;
-                        for (PaintingVariant type : validArtsArray) {
+                        for (ResourceKey<PaintingVariant> type : validArtsArray) {
 
-                            if (equalSizes(original, type)) {
+                            if (equalSizes(original.value(), Registry.PAINTING_VARIANT.getOrCreateHolderOrThrow(type).value())) {
                                 if (firstMatch == null) {
-                                    firstMatch = type;
+                                    firstMatch = Registry.PAINTING_VARIANT.getOrCreateHolderOrThrow(type);
                                 }
                                 if (takeNext) {
-                                    newArt = type;
+                                    newArt = Registry.PAINTING_VARIANT.getOrCreateHolderOrThrow(type);
                                     break;
                                 }
 
-                                if (equalNames(original, type)) {
+                                if (equalNames(original.value(), Registry.PAINTING_VARIANT.getOrCreateHolderOrThrow(type).value())) {
                                     takeNext = true;
                                 }
 
@@ -70,7 +72,7 @@ public class ProcessInteractEvent {
                         if (newArt == null && takeNext)
                             newArt = firstMatch;
 
-                        ((IPaintingAccessor) painting).callSetVariant(Holder.direct(newArt));
+                        ((IPaintingAccessor) painting).callSetVariant(newArt);
 
                         syncpacketSupplier.send(painting, serverPlayer);
                     }
